--- a/.env-example
+++ b/.env-example
@@ -6,3 +6,17 @@ DB_USER=
 DB_PASS=
 DB_PORT=
 DB_NAME=
+
+JWT_SECRET=
+
+# IMAGE KIT 
+IMAGEKIT_PUB_KEY=
+IMAGEKIT_PRI_KEY=
+IMAGEKIT_URL=
+
+# NEXMO
+NEXMO_API_KEY=
+NEXMO_API_SECRET=
+NEXMO_APPLICATION_ID=
+NEXMO_PRIVATE_KEY_PATH=
+NEXMO_API_HOST=
