--- a/package.json
+++ b/package.json
@@ -7,24 +7,26 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-quicktest": "cross-env NODE_ENV=test jest --coverage",
     "test": "cross-env NODE_ENV=test PORT=8100 npm run dev-quicktest",
+    "dev-quicktest": "cross-env NODE_ENV=test jest --coverage",
     "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vonage/server-sdk": "^2.11.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "global": "^4.4.0",
+    "imagekit": "^3.2.5",
     "jes": "^0.6.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.3.3",
+    "qrcode": "^1.5.0",
     "sha256": "^0.2.0",
     "supertest": "^6.2.3"
   },
