--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@vonage/server-sdk": "^2.11.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -27,7 +28,6 @@
     "multer": "^1.4.2",
     "mysql2": "^2.3.3",
     "qrcode": "^1.5.0",
-    "sha256": "^0.2.0",
     "supertest": "^6.2.3"
   },
   "devDependencies": {
