--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@vonage/server-sdk": "^2.11.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "canvas": "^2.9.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "global": "^4.4.0",
     "imagekit": "^3.2.5",
     "jes": "^0.6.1",
@@ -27,6 +29,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.3.3",
+    "path": "^0.12.7",
     "qrcode": "^1.5.0",
     "supertest": "^6.2.3"
   },
