--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "license": "ISC",
   "dependencies": {
     "@vonage/server-sdk": "^2.11.1",
+    "ali-oss": "^6.17.1",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "canvas": "^2.9.3",
+    "co": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
