Readjust configuration cloud storage to oss

--- a/.env-example
+++ b/.env-example
@@ -9,14 +9,16 @@ DB_NAME=
 
 JWT_SECRET=
 
-# IMAGE KIT 
-IMAGEKIT_PUB_KEY=
-IMAGEKIT_PRI_KEY=
-IMAGEKIT_URL=
+WHATSAPP_FROM_NUMBER=
+WHATSAPP_TO_NUMBER=
 
-# NEXMO
-NEXMO_API_KEY=
-NEXMO_API_SECRET=
-NEXMO_APPLICATION_ID=
-NEXMO_PRIVATE_KEY_PATH=
-NEXMO_API_HOST=
+# ALIBABA CLOUD
+ALIBABA_CLOUD_ACCESS_KEY_ID=
+ALIBABA_CLOUD_ACCESS_KEY_SECRET=
+ALIBABA_CLOUD_REGION=
+ALIBABA_CLOUD_ENDPOINT=
+ALIBABA_CLOUD_BUCKET=
+
+# WABLAS
+WABLAS_API_KEY=
+WABLAS_DOMAIN=
