Store invitation image to db

--- a/.env-example
+++ b/.env-example
@@ -12,6 +12,8 @@ JWT_SECRET=
 WHATSAPP_FROM_NUMBER=
 WHATSAPP_TO_NUMBER=
 
+IMAGE_URL=
+
 # ALIBABA CLOUD
 ALIBABA_CLOUD_ACCESS_KEY_ID=
 ALIBABA_CLOUD_ACCESS_KEY_SECRET=
