--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
     "qrcode": "^1.5.0",
+    "redis": "^4.1.1",
     "supertest": "^6.2.3"
   },
   "devDependencies": {
