--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "co": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "exceljs": "^4.3.0",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
     "global": "^4.4.0",
